--- a/Ad_marketing_sponsorship/index.html
+++ b/Ad_marketing_sponsorship/index.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>holkee 挺你！全新推出廣告行銷贊助計畫</title>
-<meta name='description' content="我們相信你的產品很多人想要！只是他們沒看到，我們相信你生意一定會成功！但我們希望你能更快達標"/>
-<meta name='keywords' content="holkee, 微電商, 廣告, 廣告行銷, 贊助金, 網站, 金物流, 電商, 達標, 生意, 買賣, 協助"/>
+<title>holkee 專屬小店服務團隊，只有我們在乎你!</title>
+<meta name='description' content="即日起，只要參與 holkee 廣告行銷贊助計畫，即可獲得廣告贊助金（即便是小額廣告預算，我們也會雙手展開給你溫暖的擁抱）"/>
+<meta name='keywords' content="holkee, 微電商, 廣告, 廣告行銷, 贊助金, 網站, 金物流, 電商, 達標, 生意, 買賣, 協助, 小額廣告預算"/>
 <meta property="og:image" content="images/share_pic.png"/>
-<meta property="og:title" content="holkee 挺你！全新推出廣告行銷贊助計畫"/>
+<meta property="og:title" content="holkee 專屬小店服務團隊，只有我們在乎你!"/>
 <meta property="og:url" content="#"/>
-<meta property="og:description" content="我們相信你的產品很多人想要！只是他們沒看到，我們相信你生意一定會成功！但我們希望你能更快達標"/>
+<meta property="og:description" content="即日起，只要參與 holkee 廣告行銷贊助計畫，即可獲得廣告贊助金（即便是小額廣告預算，我們也會雙手展開給你溫暖的擁抱）"/>
 <meta property="og:type" content="content"/>
 
 <meta name="MobileOptimized" content="width">
@@ -30,8 +30,74 @@
 	        	<h2>廣告行銷贊助計畫</h2>
 	        </div>
             <div class="question-box">
-                <h3>holkee 挺你！<span>全新推出<span class="yellow">廣告行銷贊助計畫</span></span></h3>
-                <p class="sub_title">我們相信你的產品很多人想要！<span>只是他們沒看到<br>我們相信你生意一定會成功！<span>但我們希望你能更快達標</span></p>
+                <h3 class="title">holkee 專屬小店服務團隊，只有我們在乎你!<br>
+                    即日起，只要參與 holkee 廣告行銷贊助計畫，即可獲得<span class="yellow">廣告贊助金</span></span></h3>
+                <p class="sub_title">（即便是小額廣告預算，我們也會雙手展開給你溫暖的擁抱）</span></p>
+             </div>
+             <ul class="plan clearfix">
+                 <li>
+                    <h4 class="top_title h4_icon_01">holkee 小資廣告方案 - $6,000</h4>
+                    <div class="plan_info">
+                        <p class="hightlight">每日預算 $100，連續 60 天 Google 廣告曝光</p>
+                        <p class="hightlight">Google關鍵字廣告每日上線 - 品牌關鍵字組：5 組</p>
+                        <p class="ex"><span class="red">成效預估: 觸及 360,000 名潛力客戶</span><br>
+                        每月前 100 名申請者，holkee 廣告贊助金 $500 <span class="yellow">限量領取</span></p>
+                        <h5>holkee 團隊免費贊助服務  </h5>
+                        <ul class="nb">
+                            <li><p>專人協助，快速解決架站困擾</p></li>
+                            <li><p>專業廣告文案編輯</p></li>
+                        </ul>
+                    </div>
+                 </li>
+                 <li>
+                    <h4 class="top_title h4_icon_02">holkee 精英廣告方案 - $18,000</h4>
+                    <div class="plan_info">
+                        <p class="hightlight">每日預算 $300，連續 60 天 Google 廣告曝光</p>
+                        <p class="hightlight">Google關鍵字廣告每日上線 - 品牌關鍵字 + 產品字組：5~30 組</p>
+                        <p class="hightlight">啟動Google人工智慧產品字自動搜尋曝光</p>
+                        <p class="ex"><span class="red">成效預估: 觸及 1,000,000 名潛力客戶</span><br>
+                        每月前 100 名申請者，holkee 廣告贊助金 $1,500 <span class="yellow">限量領取</span></p>
+                        <h5>holkee 團隊免費贊助服務  </h5>
+                        <ul class="nb">
+                            <li><p>專人協助，快速解決架站困擾</p></li>
+                            <li><p>專業廣告文案編輯</p></li>
+                            <li><p>客製化廣告字組建議書</p></li>
+                            <li><p>隨時掌握成效，即時自動化雲端廣告報表</p></li>
+                        </ul>
+                    </div>
+                 </li>
+                 <li>
+                    <h4 class="top_title h4_icon_03">holkee VIP 廣告方案 - $48,000</h4>
+                    <div class="plan_info">
+                        <p class="hightlight">每日預算 $800，連續 60 天廣告曝光</p>
+                        <p class="hightlight">Google關鍵字廣告每日上線 - 關鍵字組不限</p>
+                        <p class="hightlight">啟動Google人工智慧產品字自動搜尋曝光</p>
+                        <p class="hightlight">Google圖像型人工智慧廣告</p>
+                        <p class="hightlight">網站串接Google系統，自動廣告曝光</p>
+                        <p class="ex"><span class="red">預估觸及 2,000,000 名潛力客戶</span><br>
+                        每月前 100 名申請者，holkee 廣告贊助金 $3,000 <span class="yellow">限量領取</span></p>
+                        <h5>holkee 團隊免費贊助服務  </h5>
+                        <ul class="nb">
+                            <li><p>專人協助，快速解決架站困擾</p></li>
+                            <li><p>專人協助，解決綠界科技金物流串接及測試確認上線</p></li>
+                            <li><p>極速品牌官網專人協助建置，提供優質消費者體驗</p></li>
+                            <li><p>品牌官網開放自訂網域功能及移除頁末 holkee 商標</p></li>
+                            <li><p>專業廣告文案編輯建議</p></li>
+                            <li><p>客製化廣告字組建議書</p></li>
+                            <li><p>數位操作顧問廣告優化建議</p></li>
+                            <li><p>隨時掌握成效，即時自動化雲端廣告報表</p></li>
+                            <li><p>消費者進站資料輪廓分析</p></li>
+                            <li><p>專業美編支援圖片廣告素材1款2式</p>
+                        </ul>
+                    </div>
+                 </li>
+             </ul>
+	    </div>
+    </section>
+    <section class="from-box">
+        <div class="contents-box clearfix">
+            <div class="question-box">
+                <h3>領取贊助金或由專人為您服務</h3>
                 <form>
                     <ul class="fillinBox clearfix">
                         <li class="pos icon_02">
@@ -46,31 +112,19 @@
                         <li class="pos icon_07">
                             <input type="text" class="tbox" value="" size="" placeholder="聯絡E-mail">
                         </li>
-                        <li class="pos icon_03">
-                            <select class="md-input" name="" required="" data-parsley-min="1" data-parsley-min-message="請選擇需協助架站的項目">
-                                <option value="0" selected="selected" class="gray" style="color: #888;">請選擇需協助架站的項目</option>
-                                <option value="1">holkee 商品上架</option>
-                                <option value="2">holkee 訂單出貨</option>
-                                <option value="3">綠界科技申請帳號</option>
-                                <option value="4">綠界科技金物流開通</option>
-                                <option value="5">其他</option>
-                                </select>
-                        </li>
-                        <li class="pos icon_04">
-                            <select class="md-input" name="" required="" data-parsley-min="1" data-parsley-min-message="請選擇行銷預算">
-                                <option value="0" selected="selected" class="gray" style="color: #888;">請選擇廣告預算</option>
-                                <option value="1">預算小於 10,000 元</option>
-                                <option value="2">預算大於 10,000 元</option>
-                                </select>
-                        </li>
-                        <li class="pos icon_05 w100">
-                            <textarea type="text" class="tbox" placeholder="備註"></textarea>
-                        </li>
                     </ul>
                     <div class="btn"><button>確認送出</button></div>
                 </form>
+                <h3>聯絡客服中心</h3>
+                <p class="sub_title">歡迎使用以下方式與我們聯繫</p>
+                <ul class="contactus clearfix">
+                    <li><a class="icon_messenger" target="_blank" href="https://www.messenger.com/t/holkeego">Messenger</a></li>
+                    <li><a class="icon_line" class="icon_01" target="_blank" href="https://line.me/R/ti/p/%40bca1493j">LINE</a></li>
+                    <li><a class="icon_email" target="_blank" href="mailto:service@holkee.com">Email</a></li>
+                </ul>
+                <p>客服服務時間為周一至周五，09:00 ~ 18:00<br>我們會盡速回覆您，謝謝！</p>
              </div>
-	    </div>
+        </div>
         <div class="copyrights">
             <p>Copyrights © 2019 All Rights Reserved.</p>
         </div>
