--- a/gift_buy/index.html
+++ b/gift_buy/index.html
@@ -217,7 +217,7 @@
 					</ul>
 				</div>
 				<div class="fb-box">
-					<div class="fb-page" data-href="https://www.facebook.com/facebook/" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook/">Facebook</a></blockquote></div>
+					<div class="fb-page" data-href="https://www.facebook.com/facebook/" data-tabs="timeline" data-width="290" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook/">Facebook</a></blockquote></div>
 				</div>
 			</div>
 		</section>
