--- a/iiot/wifi-ad-carousel/index.html
+++ b/iiot/wifi-ad-carousel/index.html
@@ -40,69 +40,63 @@
         <input type="checkbox"> 
         <span>我同意</span>
           <span>
-            <a href="#"><span>[ 使用條款與隱私權政策 ]</span></a>
+            <a href="#"><span>[ 服務使用條款與隱私權政策 ]</span></a>
         </span>
       </label>
+      <div class="the-language">
+        <select class="form-select" data-parsley-min-message="語系">
+          <option value="zh-TW">繁體中文</option>
+          <option value="zh-CN">簡體中文</option>
+          <option value="JA">日本語</option>
+          <option value="EN">English</option>
+        </select>
+      </div>
     </div>
-    <h4>Welcome to FansWiFi Demo !</h4>
+    <!-- <h4>Welcome to FansWiFi Demo !</h4> -->
     <!--  Demos -->
     <section id="demos">
       <div class="row">
         <div class="">
           <div class="owl-carousel owl-theme">
             <div class="item">
-              <!-- <h4>1</h4> -->
-              <img src="images/img_320x480-0.png" alt="">
+              <img src="images/U_81PxKEY33.jpg" alt="">
             </div>
             <div class="item">
-              <!-- <h4>2</h4> -->
-        <img src="images/img_320x480-2.png" alt="">
+              <img src="images/U_ZYqxzrNxJ.jpg" alt="">
             </div>
             <div class="item">
-              <img src="images/img_320x480-0.png" alt="">
-              <!-- <h4>3</h4> -->
+              <img src="images/U_81PxKEY33.jpg" alt="">
             </div>
             <div class="item">
-              <img src="images/img_320x480-2.png" alt="">
-              <!-- <h4>4</h4> -->
+              <img src="images/U_ZYqxzrNxJ.jpg" alt="">
             </div>
             <div class="item">
-              <img src="images/img_320x480-0.png" alt="">
-              <!-- <h4>5</h4> -->
+              <img src="images/U_81PxKEY33.jpg" alt="">
             </div>
             <div class="item">
-              <img src="images/img_320x480-2.png" alt="">
-              <!-- <h4>6</h4> -->
+              <img src="images/U_ZYqxzrNxJ.jpg" alt="">
+            </div>  
+            <div class="item">
+              <img src="images/U_81PxKEY33.jpg" alt="">
             </div>
             <div class="item">
-              <img src="images/img_320x480-0.png" alt="">
-              <!-- <h4>7</h4> -->
-            </div>
-            <div class="item">
-              <img src="images/img_320x480-2.png" alt="">
-              <!-- <h4>8</h4> -->
-            </div>
-            <div class="item">
-              <img src="images/img_320x480-0.png" alt="">
-              <!-- <h4>9</h4> -->
-            </div>
-            <div class="item">
-              <img src="images/img_320x480-2.png" alt="">
-              <!-- <h4>10</h4> -->
-            </div>
-            <div class="item">
-              <img src="images/img_320x480-0.png" alt="">
-              <!-- <h4>11</h4> -->
-            </div>
-            <div class="item">
-              <img src="images/img_320x480-2.png" alt="">
-              <!-- <h4>12</h4> -->
+              <img src="images/U_ZYqxzrNxJ.jpg" alt="">
             </div>
             <div class="item the-continue">
-              <a href="#"><p>
+              <div class="to-continue">
+                <!-- <p><span><i class="fas fa-arrow-circle-right"></i></span></p> -->
+                <div class="w100">
+                  <button class="btn-style btn-round">繼續</button>
+                </div>
+                <div class="w100">
+                  <button class="btn-style btn-round color-gray">選擇離開</button>
+                </div>
+              </div>
+              
+              <!-- <a href="#"><p>
                 <span><i class="fas fa-arrow-circle-right"></i></span>
               Continue to access
-              </p></a>
+              </p></a> -->
             </div>
           </div> 
           <script>
@@ -119,7 +113,7 @@
                     items: 1,
                     nav: true
                   },
-                  600: {
+                  640: {
                     items: 3,
                     nav: false
                   },
